# libAnsiScreen

./: .gitignore  LICENSE  README.md  pyproject.toml
src/libansiscreen/: cell.py  cursor.py  screen.py
src/libansiscreen/color/: __init__.py  palette.py  quantize.py  rgb.py
src/libansiscreen/parser/: ansi_parser.py
src/libansiscreen/renderer/: ansi_emitter.py
src/libansiscreen/screen_ops/: clear.py  clip.py  colorize.py  copy.py  cut.py  fill.py  glyph_defs.py  gradients.py  paste.py  pixelplot.py  prim.py  select.py
tests/: test_all.sh  test_clip.py  test_colorize.py  test_emitter_out_modes.py  test_floodfill.py  test_mask.py  test_pixelplot.py  test_primitives.py  thetis.ans
